# binance-syncer

./: README.md  pyproject.toml
examples/: examples.ipynb
src/binance_syncer/: __init__.py  binance_data_sync.py  cli.py  constant.py  utils.py
src/binance_syncer/examples/: core.py
src/binance_syncer/loader/: __init__.py  core.py
src/binance_syncer/syncer/: __init__.py  core.py
src/binance_syncer/utils/: enums.py  logger.py  utils.py
