[project]
name = "binance_syncer"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "boto3>=1.39.8",
    "bs4>=0.0.2",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "certifi>=2025.7.14",
    "rich>=14.0.0",
    "utilities-toolkit>=0.2.0",
]

[project.scripts]
binance-syncer = "binance_syncer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/binance_syncer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
